--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -6,7 +6,7 @@
     = ${{ item.subtotal }}
   </li>
 {% endfor %}
-{% for item in items %}
+{% for item in books %}
   <p>
     {{ item.book.title }} ({{ item.quantity }})
     <a href="{% url 'remove_from_cart' item.book.id %}">
@@ -18,3 +18,4 @@
 </ul>
 <p>Total: ${{ total }}</p>
 <a href="/">Volver</a>
+
