--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -1,21 +1,14 @@
 <h1>Carrito</h1>
-<ul>
-{% for item in books %}
-  <li>
-    {{ item.book.title }} x {{ item.quantity }}
+{% for item in items %}
+  <div>
+    {{ item.book.title }}
+    x {{ item.quantity }}
     = ${{ item.subtotal }}
-  </li>
+    <a href="{% url 'remove_from_cart' item.book.id %}">Eliminar</a>
+  </div>
+{% empty %}
+  <p>Carrito vacío</p>
 {% endfor %}
-{% for item in books %}
-  <p>
-    {{ item.book.title }} ({{ item.quantity }})
-    <a href="{% url 'remove_from_cart' item.book.id %}">
-      Eliminar
-    </a>
-  </p>
-{% endfor %}
-
-</ul>
-<p>Total: ${{ total }}</p>
+<hr>
+<p><strong>Total: ${{ total }}</strong></p>
 <a href="/">Volver</a>
-
