--- a/store/templates/store/catalog.html
+++ b/store/templates/store/catalog.html
@@ -20,7 +20,10 @@
 
 {% if user.is_authenticated %}
   Hola {{ user.username }}
-  <a href="/accounts/logout/">Salir</a>
+  <form method="post" action="{% url 'logout' %}">
+  {% csrf_token %}
+  <button type="submit">Salir</button>
+</form>
 {% else %}
   <a href="/accounts/login/">Login</a>
   <a href="/register/">Registro</a>
