--- a/store/templates/store/catalog.html
+++ b/store/templates/store/catalog.html
@@ -1,30 +1,19 @@
 <h2>Categorías</h2>
-<ul>
-  <li><a href="/">Todas</a></li>
+<ul><li><a href="/">Todas</a></li>
   {% for category in categories %}
-    <li>
-      <a href="/?category={{ category.id }}">
-        {{ category.name }}
-      </a>
-    </li>
+    <li><a href="/?category={{ category.id }}">{{ category.name }}</a></li>
   {% endfor %}
 </ul>
 {% for book in books %}
-  <li>
-    {{ book.title }} - ${{ book.price }}
+  <li>{{ book.title }} - ${{ book.price }}
     <a href="{% url 'add_to_cart' book.id %}">Agregar</a>
   </li>
 {% endfor %}
-
 <a href="{% url 'view_cart' %}">Ver carrito</a>
-
 {% if user.is_authenticated %}
   Hola {{ user.username }}
   <form method="post" action="{% url 'logout' %}">
   {% csrf_token %}
   <button type="submit">Salir</button>
-</form>
-{% else %}
-  <a href="/accounts/login/">Login</a>
-  <a href="/register/">Registro</a>
-{% endif %}
+</form>{% else %}<a href="/accounts/login/">Login</a><a href="/register/">Registro</a>{% endif %}
+<a href="{% url 'book_detail' book.id %}">{{ book.title }}</a>
